Removed compile and link menus Improved Java and Python features